--- a/style.css
+++ b/style.css
@@ -223,3 +223,32 @@ header nav ul li a{
   margin-bottom: 16px;
   font-weight: 500;
 }
+.think-section .container{
+  border-radius: 12px;
+  background: #f7f6f2;
+  text-align: center;
+  padding: 80px 0;
+  margin-bottom: 120px;
+}
+.think-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+
+}
+.think-content h4{
+  font-size: 40px;
+  font-weight: bold;
+  color: #001931;
+text-transform: capitalize;
+
+}
+
+.think-content p{
+  font-size: 16px;
+  font-weight: 400;
+  color: #627382;
+  margin-bottom: 8px;
+}
